recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value -&
for(i<-length to 0 by -&){
                      ^