recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {

for(i<-length to 0 by -&){

	avance(length)
	gauche(angle)
	spiral(steps,angle,length+increment,increment)
	
}
}
